Try writing a customer remapper. Bad idea