@@ -23,6 +23,7 @@ import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -32,7 +33,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import com.basedloader.remap.ForgeModClassRemapper;
+import com.basedloader.util.BasedConstants;
 import io.github.astrarre.amalg.mixin.MixinExtensionReborn;
+
+import net.fabricmc.loader.impl.metadata.AbstractModMetadata;
+
+import org.objectweb.asm.ClassReader;
 import org.objectweb.asm.commons.Remapper;
 
 import net.fabricmc.accesswidener.AccessWidenerReader;
@@ -51,13 +58,23 @@ import net.fabricmc.tinyremapper.NonClassCopyMode;
 import net.fabricmc.tinyremapper.OutputConsumerPath;
 import net.fabricmc.tinyremapper.TinyRemapper;
 
+import org.objectweb.asm.tree.ClassNode;
+
 public final class RuntimeModRemapper {
 	public static void remap(Collection<ModCandidate> modCandidates, Path tmpDir, Path outputDir) {
 		List<ModCandidate> modsToRemap = new ArrayList<>();
 
 		for (ModCandidate mod : modCandidates) {
 			if (mod.getRequiresRemap()) {
-				modsToRemap.add(mod);
+				if (mod.getMetadata().getType().equals(BasedConstants.FORGE_MOD_TYPE)) {
+					try {
+						remapForgeMod(mod, tmpDir, outputDir);
+					} catch (IOException e) {
+						throw new RuntimeException("Failed to remap Forge mod", e);
+					}
+				}
+				if (mod.getMetadata().getType().equals(AbstractModMetadata.TYPE_FABRIC_MOD))
+					modsToRemap.add(mod);
 			}
 		}
 
@@ -89,7 +106,7 @@ public final class RuntimeModRemapper {
 
 				if (mod.hasPath()) {
 					List<Path> paths = mod.getPaths();
-					if (paths.size() != 1) throw new UnsupportedOperationException("multiple path for "+mod);
+					if (paths.size() != 1) throw new UnsupportedOperationException("multiple path for " + mod);
 
 					info.inputPath = paths.get(0);
 				} else {
@@ -135,7 +152,7 @@ public final class RuntimeModRemapper {
 						FileSystem fs = jarFs.get();
 						info.accessWidener = remapAccessWidener(Files.readAllBytes(fs.getPath(accessWidener)), remapper.getRemapper());
 					} catch (Throwable t) {
-						throw new RuntimeException("Error remapping access widener for mod '"+mod.getId()+"'!", t);
+						throw new RuntimeException("Error remapping access widener for mod '" + mod.getId() + "'!", t);
 					}
 				}
 			}
@@ -185,6 +202,80 @@ public final class RuntimeModRemapper {
 		}
 	}
 
+	private static void remapForgeMod(ModCandidate mod, Path tmpDir, Path outputDir) throws IOException {
+		Path inputPath;
+		if (mod.hasPath()) {
+			List<Path> paths = mod.getPaths();
+			if (paths.size() != 1) throw new UnsupportedOperationException("multiple path for " + mod);
+
+			inputPath = paths.get(0);
+		} else {
+			inputPath = mod.copyToDir(tmpDir, true);
+		}
+
+		Path minecraftJar = getRemapClasspath().stream().filter(path -> path.toString().contains("minecraft")).toList().get(0);
+		ForgeModClassRemapper remapper = new ForgeModClassRemapper(minecraftJar, FabricLauncherBase.getLauncher().getMappingConfiguration().getSrgMappings(), "srg", "intermediary");
+		Path outModPath = outputDir.resolve(mod.getId() + "-intermediary.jar");
+		Files.deleteIfExists(outModPath);
+
+		// Step 1: Cache nodes for method hierarchy fixes
+		try (FileSystemUtil.FileSystemDelegate jarFs = FileSystemUtil.getJarFileSystem(minecraftJar, false)) {
+			Files.walk(jarFs.get().getPath("/")).forEach(path -> {
+				if (!Files.isDirectory(path)) {
+					if (path.toString().endsWith(".class")) {
+						try {
+							ClassNode node = new ClassNode();
+							new ClassReader(Files.readAllBytes(path)).accept(node, 0);
+							remapper.cache(node.name, node);
+						} catch (IOException e) {
+							throw new RuntimeException(e);
+						}
+					}
+				}
+			});
+		}
+
+		try (FileSystemUtil.FileSystemDelegate outputFs = FileSystemUtil.getJarFileSystem(outModPath, true)) {
+			try (FileSystemUtil.FileSystemDelegate jarFs = FileSystemUtil.getJarFileSystem(inputPath, false)) {
+				// Step 1 part 2: Include mod files
+				Files.walk(jarFs.get().getPath("/")).forEach(path -> {
+					if (!Files.isDirectory(path)) {
+						if (path.toString().endsWith(".class")) {
+							try {
+								ClassNode node = new ClassNode();
+								new ClassReader(Files.readAllBytes(path)).accept(node, 0);
+								remapper.cache(node.name, node);
+							} catch (IOException e) {
+								throw new RuntimeException(e);
+							}
+						}
+					}
+				});
+
+				// Step 2: Remap
+				Files.walk(jarFs.get().getPath("/")).forEach(path -> {
+					try {
+						if (!Files.isDirectory(path)) {
+							Path outPath = outputFs.get().getPath(path.toString());
+							Files.createDirectories(outPath.getParent());
+
+							if (path.toString().endsWith(".class")) {
+								byte[] classBytes = Files.readAllBytes(path);
+								Files.write(outPath, remapper.remap(classBytes));
+							} else {
+								Files.copy(path, outPath, StandardCopyOption.COPY_ATTRIBUTES);
+							}
+						}
+					} catch (IOException e) {
+						throw new RuntimeException("Failed copying resources during Forge remapping", e);
+					}
+				});
+			} catch (Throwable t) {
+				throw new RuntimeException("Error remapping access widener for mod '" + mod.getId() + "'!", t);
+			}
+		}
+	}
+
 	private static byte[] remapAccessWidener(byte[] input, Remapper remapper) {
 		AccessWidenerWriter writer = new AccessWidenerWriter();
 		AccessWidenerRemapper remappingDecorator = new AccessWidenerRemapper(writer, remapper, "intermediary", "named");
@@ -200,7 +291,7 @@ public final class RuntimeModRemapper {
 			throw new RuntimeException("No remapClasspathFile provided");
 		}
 
-		String content = new String(Files.readAllBytes(Paths.get(remapClasspathFile)), StandardCharsets.UTF_8);
+		String content = Files.readString(Paths.get(remapClasspathFile));
 
 		return Arrays.stream(content.split(File.pathSeparator))
 				.map(Paths::get)
